<resources>
    <string name="app_name">Remouse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="content">Select a device"</string>
    <string name="switchtext">Enable/Disable Network Connection</string>
    <string name="mouseswitch">Turn Mouse Movement On/Off</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="middle">Middle</string>
    <string name="smart_i_o">Smart I/O</string>
    <string name="keyboard">Keyboard</string>
    <string name="connect">Connect</string>
    <string name="app_info">App info</string>
    <string name="about">About</string>
    <string name="_3d_mouse">3D mouse</string>
    <string name="_2d_mouse">2D Mouse</string>
    <string name="touchpad">Touchpad</string>
    <string name="press_move">Press hold and Move</string>
    <string name="checkbox">CheckBox</string>
    <string name="textview">TextView</string>
    <string name="no_device_connected">No device connected</string>
    <string name="Send">Send</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="change_3d_mouse_sensitivity">Change 3D Mouse Sensitivity</string>
    <string name="change_2d_mouse_sensitivity">Change 2D Mouse Sensitivity</string>
    <string name="sensitivity2D" format="float" type="dimen">1.5</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
