<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ListPreference
        android:title="@string/change_3d_mouse_sensitivity"
        android:summary="Select the type of sensitivity"
        android:key="sensitivity_3D"
        android:defaultValue="2000"
        android:entries="@array/listArray3D"
        android:entryValues="@array/listValues3D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListPreference
        android:title="@string/change_2d_mouse_sensitivity"
        android:summary="Select the type of sensitivity"
        android:key="sensitivity_2D"
        android:defaultValue="@string/sensitivity2D"
        android:entries="@array/listArray2D"
        android:entryValues="@array/listValues2D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</PreferenceScreen>