<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="project.android.TouchpadFragment">

    <Button
        android:text="@string/left"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/button_touch_left"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/touch_downscroll"
        android:layout_toStartOf="@+id/touch_downscroll" />

    <Button
        android:text="@string/touchpad"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/button_touch"
        android:background="#7fa87f"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button"
        android:layout_above="@+id/button_touch_left" />

    <Button
        android:text="@string/middle"
        android:layout_width="80dp"
        android:id="@+id/button_touch_middle"
        android:layout_height="100dp"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_touch_right"
        android:layout_toStartOf="@+id/button_touch_right" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_expand_more_black_24dp"
        android:id="@+id/touch_downscroll"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_touch_middle"
        android:layout_toStartOf="@+id/button_touch_middle" />

    <ImageButton
        app:srcCompat="@drawable/ic_expand_less_black_24dp"
        android:id="@+id/touch_upscroll"
        android:layout_height="50dp"
        android:layout_width="50dp"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_below="@+id/button_touch"
        android:layout_toLeftOf="@+id/button_touch_middle"
        android:layout_toStartOf="@+id/button_touch_middle" />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:text="@string/right"
        android:layout_height="100dp"
        android:id="@+id/button_touch_right"
        android:layout_width="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
